unified changelog format
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1621 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-webdav/CHANGES.txt
+++ b/cog/modules/provider-webdav/CHANGES.txt
@@ -12,17 +12,24 @@
 
 *** Updated file resource to support createDirectories
 
-(04/19/2005)	Renamed this module from "core-provider-webdav" to 
-		"provider-webdav"
+(04/19/2005)
+
+*** Renamed this module from "core-provider-webdav" to 
+	"provider-webdav"
+	
 -------------------------------2.0----------------------------------
 
-(03/24/2005)    Updated the implementation of
-                org.globus.cog.core.impl.file.webdav.FileResourceImpl.java
-                to make it compatible with the changes in its interface 
+(03/24/2005)
 
-(03/17/2005)  	Updated the WebDAVSecurityCredentialImpl to show a dialog  
-		box prompting the user to enter credentials (if null
-		credentials are specified)   
+*** Updated the implementation of
+    org.globus.cog.core.impl.file.webdav.FileResourceImpl.java
+    to make it compatible with the changes in its interface 
+
+(03/17/2005)
+
+*** Updated the WebDAVSecurityCredentialImpl to show a dialog  
+	box prompting the user to enter credentials (if null
+	credentials are specified)   
 
 -------------------------------1.0----------------------------------
 
