--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+(03/23/07)
+
+*** Fixed -resume
+
+*** Fixed code dealing with command line arguments
+
 (03/16/07)
 
 *** Labels in graphs are quoted now
