minor README tidying
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@608 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/docs/README
+++ b/docs/README
@@ -1,8 +1,7 @@
-Edited with Eclipse, with OrangeVolt plugins.
 General principles:
  - sections and subsections are ordered from <sect1>, <sect2>, etc
  - the code is inputted as <programlisting>
- - be CAREFUL to translate in-text "<" to "&lt;"
+ - be careful to escape in-text "<" to "&lt;"
 
 Generate the html with:
 $ xsltproc formatting/custom_html.xsl userguide.xml
