Marker types (that is, types with no content) can now be specified without an empty {} block.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@618 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,14 @@
+(04/12/07)
+
+*** Marker types (that is, types with no content) can now be specified without
+    an empty {} block. So what was previous written as:
+
+      type imagefile {};
+
+    can now be written as
+
+      type imagefile;
+
 (04/11/07)
 
 *** CSV mapper will now take commas as a field separator (in addition to the
