language regression tests were broken by changes I made recently. this fixes them. it removes three tests entirely - charm.dtm 051-nika.dtm 112-bad-typedef.xml
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@654 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/tests/language/working-base/00617-one-param-func-expr.xml
+++ b/tests/language/working-base/00617-one-param-func-expr.xml
@@ -1,4 +1,7 @@
 <program xmlns="http://www.griphyn.org/2006/08/vdl"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="i" type="int"><function name="foo">1 + 2</function></variable>
+  <variable name="i" type="int"><function name="foo">
+  <argument>
+    1 + 2
+  </argument></function></variable>
 </program>
