--- a/tests/language/working-base/0065-fn-in-fn-simple.xml
+++ b/tests/language/working-base/0065-fn-in-fn-simple.xml
@@ -1,4 +1,10 @@
 <program xmlns="http://www.griphyn.org/2006/08/vdl"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="i" type="int"><function name="foo"><function name="baz">2</function></function></variable>
+  <variable name="i" type="int"><function name="foo">
+  <argument>
+    <function name="baz">
+    <argument>
+      2
+    </argument></function>
+  </argument></function></variable>
 </program>
