--- a/tests/language/working-base/046-tibi.xml
+++ b/tests/language/working-base/046-tibi.xml
@@ -16,7 +16,10 @@
     <binding type="app">
       <application>
         <executable>cwtsmall</executable>
-        <argument><function name="filename">waveletScript</function></argument>
+        <argument><function name="filename">
+        <argument>
+          waveletScript
+        </argument></function></argument>
         <argument>subjNo</argument>
         <argument>trialType</argument>
       </application>
