--- a/tests/language/working-base/q1.xml
+++ b/tests/language/working-base/q1.xml
@@ -13,7 +13,10 @@
       <application>
         <executable>echo</executable>
         <argument>&quot;Hello, world!&quot;</argument>
-        <stdout><function name="filename">t</function></stdout>
+        <stdout><function name="filename">
+        <argument>
+          t
+        </argument></function></stdout>
       </application>
     </binding>
   </procedure>
