--- a/tests/language/working-base/00616-one-param-func-expr.xml
+++ b/tests/language/working-base/00616-one-param-func-expr.xml
@@ -1,4 +1,7 @@
 <program xmlns="http://www.griphyn.org/2006/08/vdl"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="i" type="int"><function name="foo">1</function> + 2</variable>
+  <variable name="i" type="int"><function name="foo">
+  <argument>
+    1
+  </argument></function> + 2</variable>
 </program>
