--- a/tests/language/working-base/0063-two-functions-in-expr.xml
+++ b/tests/language/working-base/0063-two-functions-in-expr.xml
@@ -1,4 +1,10 @@
 <program xmlns="http://www.griphyn.org/2006/08/vdl"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="i" type="int"><function name="foo">1</function> + <function name="baz">2</function></variable>
+  <variable name="i" type="int"><function name="foo">
+  <argument>
+    1
+  </argument></function> + <function name="baz">
+  <argument>
+    2
+  </argument></function></variable>
 </program>
