--- a/tests/language/working-base/039-montage.xml
+++ b/tests/language/working-base/039-montage.xml
@@ -37,9 +37,18 @@
       <application>
         <executable>mProjectPP</executable>
         <argument>&quot;-X&quot;</argument>
-        <argument><function name="filename">rawImage</function></argument>
-        <argument><function name="filename">projectedImage</function></argument>
-        <argument><function name="filename">template</function></argument>
+        <argument><function name="filename">
+        <argument>
+          rawImage
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          projectedImage
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          template
+        </argument></function></argument>
       </application>
     </binding>
   </procedure>
@@ -52,14 +61,20 @@
     <foreach var="img" in="rawImages" indexVar="i">
       <dataset name="projImg" type="Image">
         <mapping descriptor="regexp_mapper">
-          <param name="source"><function name="filename">img</function></param>
+          <param name="source"><function name="filename">
+          <argument>
+            img
+          </argument></function></param>
           <param name="match">&quot;.*\/(.*)&quot;</param>
           <param name="transform">&quot;proj_\1&quot;</param>
         </mapping>
       </dataset>
       <dataset name="areaImg" type="Image">
         <mapping descriptor="regexp_mapper">
-          <param name="source"><function name="filename">projImg</function></param>
+          <param name="source"><function name="filename">
+          <argument>
+            projImg
+          </argument></function></param>
           <param name="match">&quot;(.*)\.(.*)&quot;</param>
           <param name="transform">&quot;\1_area.\2&quot;</param>
         </mapping>
@@ -80,8 +95,14 @@
     <binding type="app">
       <application>
         <executable>mOverlaps</executable>
-        <argument><function name="filename">imagesTbl</function></argument>
-        <argument><function name="filename">diffsTbl</function></argument>
+        <argument><function name="filename">
+        <argument>
+          imagesTbl
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          diffsTbl
+        </argument></function></argument>
       </application>
     </binding>
   </procedure>
@@ -97,11 +118,26 @@
       <application>
         <executable>mDiffFit</executable>
         <argument>&quot;-s&quot;</argument>
-        <argument><function name="filename">statusFile</function></argument>
-        <argument><function name="filename">projectedImage1</function></argument>
-        <argument><function name="filename">projectedImage2</function></argument>
-        <argument><function name="filename">diffImage</function></argument>
-        <argument><function name="filename">template</function></argument>
+        <argument><function name="filename">
+        <argument>
+          statusFile
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          projectedImage1
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          projectedImage2
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          diffImage
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          template
+        </argument></function></argument>
       </application>
     </binding>
   </procedure>
@@ -112,7 +148,10 @@
     <input name="template" type="Header"/>
     <dataset name="diffs" type="DiffStruct" isArray="true">
       <mapping descriptor="csv_mapper">
-        <param name="file"><function name="filename">diffsTbl</function></param>
+        <param name="file"><function name="filename">
+        <argument>
+          diffsTbl
+        </argument></function></param>
         <param name="skip">1</param>
         <param name="hdelim">&quot; |&quot;</param>
       </mapping>
@@ -121,7 +160,10 @@
       <variable name="image1" type="Image">d.plus</variable>
       <dataset name="area1" type="Image">
         <mapping descriptor="regexp_mapper">
-          <param name="source"><function name="filename">image1</function></param>
+          <param name="source"><function name="filename">
+          <argument>
+            image1
+          </argument></function></param>
           <param name="match">&quot;(.*)\.(.*)&quot;</param>
           <param name="transform">&quot;\1_area.\2&quot;</param>
         </mapping>
@@ -129,19 +171,28 @@
       <variable name="image2" type="Image">d.minus</variable>
       <dataset name="area2" type="Image">
         <mapping descriptor="regexp_mapper">
-          <param name="source"><function name="filename">image2</function></param>
+          <param name="source"><function name="filename">
+          <argument>
+            image2
+          </argument></function></param>
           <param name="match">&quot;(.*)\.(.*)&quot;</param>
           <param name="transform">&quot;\1_area.\2&quot;</param>
         </mapping>
       </dataset>
       <dataset name="diffImg" type="Image">
         <mapping descriptor="fixed_mapper">
-          <param name="file"><function name="filename">d.diff</function></param>
+          <param name="file"><function name="filename">
+          <argument>
+            d.diff
+          </argument></function></param>
         </mapping>
       </dataset>
       <dataset name="statusFile" type="TxtFile">
         <mapping descriptor="regexp_mapper">
-          <param name="source"><function name="filename">diffImg</function></param>
+          <param name="source"><function name="filename">
+          <argument>
+            diffImg
+          </argument></function></param>
           <param name="match">&quot;diff(.*)fits&quot;</param>
           <param name="transform">&quot;fit\1txt&quot;</param>
         </mapping>
@@ -165,8 +216,14 @@
     <binding type="app">
       <application>
         <executable>mStatTbl</executable>
-        <argument><function name="filename">diffsTbl</function></argument>
-        <argument><function name="filename">statusFilesTbl</function></argument>
+        <argument><function name="filename">
+        <argument>
+          diffsTbl
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          statusFilesTbl
+        </argument></function></argument>
       </application>
     </binding>
   </procedure>
@@ -178,8 +235,14 @@
     <binding type="app">
       <application>
         <executable>mConcatFit</executable>
-        <argument><function name="filename">statusFilesTbl</function></argument>
-        <argument><function name="filename">fitsTbl</function></argument>
+        <argument><function name="filename">
+        <argument>
+          statusFilesTbl
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          fitsTbl
+        </argument></function></argument>
         <argument>statusDir</argument>
       </application>
     </binding>
@@ -191,9 +254,18 @@
     <binding type="app">
       <application>
         <executable>mBgModel</executable>
-        <argument><function name="filename">projectedImagesTbl</function></argument>
-        <argument><function name="filename">fitsTbl</function></argument>
-        <argument><function name="filename">correctionsTbl</function></argument>
+        <argument><function name="filename">
+        <argument>
+          projectedImagesTbl
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          fitsTbl
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          correctionsTbl
+        </argument></function></argument>
       </application>
     </binding>
   </procedure>
@@ -208,10 +280,22 @@
       <application>
         <executable>mBackground</executable>
         <argument>&quot;-t&quot;</argument>
-        <argument><function name="filename">projectedImage</function></argument>
-        <argument><function name="filename">correctedImage</function></argument>
-        <argument><function name="filename">projectedImagesTbl</function></argument>
-        <argument><function name="filename">correctionsTbl</function></argument>
+        <argument><function name="filename">
+        <argument>
+          projectedImage
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          correctedImage
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          projectedImagesTbl
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          correctionsTbl
+        </argument></function></argument>
       </application>
     </binding>
   </procedure>
@@ -226,14 +310,20 @@
       <variable name="projArea" type="Image">projectedAreas[i]</variable>
       <dataset name="corrImg" type="Image">
         <mapping descriptor="regexp_mapper">
-          <param name="source"><function name="filename">projImg</function></param>
+          <param name="source"><function name="filename">
+          <argument>
+            projImg
+          </argument></function></param>
           <param name="match">&quot;proj_(.*)&quot;</param>
           <param name="transform">&quot;corr_\1&quot;</param>
         </mapping>
       </dataset>
       <dataset name="corrArea" type="Image">
         <mapping descriptor="regexp_mapper">
-          <param name="source"><function name="filename">corrImg</function></param>
+          <param name="source"><function name="filename">
+          <argument>
+            corrImg
+          </argument></function></param>
           <param name="match">&quot;(.*)\.(.*)&quot;</param>
           <param name="transform">&quot;\1_area.\2&quot;</param>
         </mapping>
@@ -258,7 +348,10 @@
       <application>
         <executable>mImgtbl</executable>
         <argument>imageDir</argument>
-        <argument><function name="filename">imagesTbl</function></argument>
+        <argument><function name="filename">
+        <argument>
+          imagesTbl
+        </argument></function></argument>
       </application>
     </binding>
   </procedure>
@@ -272,8 +365,14 @@
         <executable>mImgtbl</executable>
         <argument>imageDir</argument>
         <argument>&quot;-t&quot;</argument>
-        <argument><function name="filename">oldImagesTbl</function></argument>
-        <argument><function name="filename">newImagesTbl</function></argument>
+        <argument><function name="filename">
+        <argument>
+          oldImagesTbl
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          newImagesTbl
+        </argument></function></argument>
       </application>
     </binding>
   </procedure>
@@ -288,9 +387,18 @@
       <application>
         <executable>mAdd</executable>
         <argument>&quot;-e&quot;</argument>
-        <argument><function name="filename">imagesTbl</function></argument>
-        <argument><function name="filename">template</function></argument>
-        <argument><function name="filename">mosaic</function></argument>
+        <argument><function name="filename">
+        <argument>
+          imagesTbl
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          template
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          mosaic
+        </argument></function></argument>
       </application>
     </binding>
   </procedure>
@@ -301,8 +409,14 @@
     <binding type="app">
       <application>
         <executable>mShrink</executable>
-        <argument><function name="filename">image</function></argument>
-        <argument><function name="filename">shrunkImage</function></argument>
+        <argument><function name="filename">
+        <argument>
+          image
+        </argument></function></argument>
+        <argument><function name="filename">
+        <argument>
+          shrunkImage
+        </argument></function></argument>
         <argument>factor</argument>
       </application>
     </binding>
@@ -316,12 +430,18 @@
         <argument>&quot;-ct&quot;</argument>
         <argument>1</argument>
         <argument>&quot;-gray&quot;</argument>
-        <argument><function name="filename">image</function></argument>
+        <argument><function name="filename">
+        <argument>
+          image
+        </argument></function></argument>
         <argument>&quot;-1.5s&quot;</argument>
         <argument>&quot;60s&quot;</argument>
         <argument>&quot;gaussian&quot;</argument>
         <argument>&quot;-out&quot;</argument>
-        <argument><function name="filename">jpeg</function></argument>
+        <argument><function name="filename">
+        <argument>
+          jpeg
+        </argument></function></argument>
       </application>
     </binding>
   </procedure>
