--- a/tests/language/working-base/q14.xml
+++ b/tests/language/working-base/q14.xml
@@ -17,7 +17,10 @@
       <application>
         <executable>echo</executable>
         <argument>s</argument>
-        <stdout><function name="filename">t</function></stdout>
+        <stdout><function name="filename">
+        <argument>
+          t
+        </argument></function></stdout>
       </application>
     </binding>
   </procedure>
@@ -28,8 +31,14 @@
       <application>
         <executable>wc</executable>
         <argument>&quot;-w&quot;</argument>
-        <argument><function name="filename">f</function></argument>
-        <stdout><function name="filename">t</function></stdout>
+        <argument><function name="filename">
+        <argument>
+          f
+        </argument></function></argument>
+        <stdout><function name="filename">
+        <argument>
+          t
+        </argument></function></stdout>
       </application>
     </binding>
   </procedure>
