--- a/tests/language/working-base/q2.xml
+++ b/tests/language/working-base/q2.xml
@@ -14,7 +14,10 @@
       <application>
         <executable>echo</executable>
         <argument>s</argument>
-        <stdout><function name="filename">t</function></stdout>
+        <stdout><function name="filename">
+        <argument>
+          t
+        </argument></function></stdout>
       </application>
     </binding>
   </procedure>
