fixed NPE and canceling issues
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1636 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-gt4_0_0/CHANGES.txt
+++ b/cog/modules/provider-gt4_0_0/CHANGES.txt
@@ -1,3 +1,11 @@
+(05/17/2007)
+
+*** Fixed flow issues when canceling a job
+
+*** Fixed a bug that could cause a NPE if WS-GRAM would report a
+    failed job without an attached fault.
+
+
 -------------------------------2.4---------------------------------
 
 (11/24/2006)
