Add a mapper, array_mapper, which maps from a string array of filenames. This was requested in bug 27.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@750 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+(05/21/07)
+
+*** Add a mapper, array_mapper, which maps from a string array of filenames.
+    This was requested in bug 27.
+
 (04/27/07)
 
 *** Fixed a deadlock in the remote caching code.
