binding type attribute was unnecessary and unused - removed
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@871 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/tests/language/working-base/022-app-procedure.xml
+++ b/tests/language/working-base/022-app-procedure.xml
@@ -3,7 +3,7 @@
   <procedure name="generate">
     <output name="f" type="file"/>
     <input name="p1" type="float"/>
-    <binding type="app">
+    <binding>
       <application>
         <executable>generate</executable>
         <argument>&quot;-aTOP -T4&quot;</argument>
