--- a/tests/language/working-base/051-nika.xml
+++ b/tests/language/working-base/051-nika.xml
@@ -10,7 +10,7 @@
   <procedure name="Pre_antchmbr">
     <output name="t" type="file"/>
     <input name="f" type="file" isArray="true"/>
-    <binding type="app">
+    <binding>
       <application>
         <executable>pre_ch</executable>
       </application>
