--- a/tests/language/working-base/array_wildcard.xml
+++ b/tests/language/working-base/array_wildcard.xml
@@ -10,7 +10,7 @@
   <procedure name="echo_wildcard">
     <output name="t" type="file"/>
     <input name="s" type="string" isArray="true"/>
-    <binding type="app">
+    <binding>
       <application>
         <executable>echo</executable>
         <argument>s[*]</argument>
