--- a/tests/language/working-base/q1.xml
+++ b/tests/language/working-base/q1.xml
@@ -9,7 +9,7 @@
   </types>
   <procedure name="greeting">
     <output name="t" type="messagefile"/>
-    <binding type="app">
+    <binding>
       <application>
         <executable>echo</executable>
         <argument>&quot;Hello, world!&quot;</argument>
