--- a/tests/language/working-base/q14.xml
+++ b/tests/language/working-base/q14.xml
@@ -13,7 +13,7 @@
   <procedure name="greeting">
     <output name="t" type="messagefile"/>
     <input name="s" type="string"/>
-    <binding type="app">
+    <binding>
       <application>
         <executable>echo</executable>
         <argument>s</argument>
@@ -27,7 +27,7 @@
   <procedure name="countwords">
     <output name="t" type="countfile"/>
     <input name="f" type="messagefile"/>
-    <binding type="app">
+    <binding>
       <application>
         <executable>wc</executable>
         <argument>&quot;-w&quot;</argument>
