--- a/tests/language/working-base/q15.xml
+++ b/tests/language/working-base/q15.xml
@@ -16,7 +16,7 @@
   <procedure name="greeting">
     <output name="t" type="messagefile"/>
     <input name="d" type="details"/>
-    <binding type="app">
+    <binding>
       <application>
         <executable>echo</executable>
         <argument>&quot;Hello. Your names is&quot;</argument>
