--- a/tests/language/working-base/q21.xml
+++ b/tests/language/working-base/q21.xml
@@ -10,7 +10,7 @@
   <procedure name="greeting">
     <output name="t" type="messagefile"/>
     <input name="s" type="string" default="&quot;hello&quot;"/>
-    <binding type="app">
+    <binding>
       <application>
         <executable>echo</executable>
         <argument>s</argument>
