--- a/src/cog/modules/karajan/CHANGES.txt
+++ b/src/cog/modules/karajan/CHANGES.txt
@@ -1,3 +1,11 @@
+(07/02/2007)
+
+*** A few size/performance optimizations on argument related things
+
+*** Closing of ordered channels is not done recursively any more. 
+    For large parallelism, this could cause a stack overflow 
+    (see http://bugzilla.mcs.anl.gov/swift/show_bug.cgi?id=72)
+
 (04/11/2007)
 
 *** Fixed global throttling of job submission
