--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+2007-07-19
+
+*** Swift 0.2 release made from Swift SVN r915 and CoG SVN r1658
+
 (05/21/07)
 
 *** Add a mapper, array_mapper, which maps from a string array of filenames.
