Removed break; statement from the language. It was previously unimplemented and acted as a no-op. Any code which now does not compile can be made to compile by removing the break statements. No other changes should be necessary, and no behavioural changes should result.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1001 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,10 @@
+(07/28/07)
+
+*** Removed break; statement from the language. It was previously unimplemented
+    and acted as a no-op. Any code which now does not compile can be made to
+    compile by removing the break statements. No other changes should be
+    necessary, and no behavioural changes should result.
+
 (07/19/07)
 
 *** Swift 0.2 release made from Swift SVN r915 and CoG SVN r1658
