--- a/tests/language/not-working/case-broken.xml
+++ b/tests/language/not-working/case-broken.xml
@@ -1,1 +1,1 @@
-Could not compile SwiftScript source: line 14:1: expecting '}', found 'null'
+Could not compile SwiftScript source: line 6:6: unexpected token: break
